<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HIFI-prototyp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="application_title">Poker King</string>
    <string name="username_hint">username</string>
    <string name="passw_hint">password</string>
    <string name="passw_reset_question">Forgot your password?</string>
    <string name="login_button_title">Log In</string>
    <string name="title_activity_password_reset">PasswordReset</string>
    <string name="email_hint">e-mail</string>
    <string name="reset">Reset</string>
    <string name="back">Back</string>
    <string name="title_activity_user_profile">UserProfile</string>
    <string name="Tariff">Pick the best tariff:</string>
    <string name="dummy_user">Jan Hoha</string>
    <string name="dummy_tarif_left">You have 77 days</string>
    <string name="tariff_name_basic">Basic</string>
    <string name="tariff_name_adv">Advanced</string>
    <string name="tariff_name_pro">Proffessional</string>
    <string name="title_activity_poker_table">PokerTable</string>
    <string name="dummy_win_1">Win: 47.8%</string>
    <string name="dummy_win_2">Win: 52.2%</string>
    <string name="register_name">name:</string>
    <string name="register_email">e-mail:</string>
    <string name="register_birthday">birthday:</string>
    <string name="register_birthday_hint">01/01/1989</string>
    <string name="register_password">password:</string>
    <string name="register_password_dummy">weak</string>
    <string name="register_password_again">password again:</string>
    <string name="register_button">Register</string>
    <string name="register_terms">I\'ve read and accepted terms and conditions...</string>
    <string name="register_title">Registration</string>
    <string name="feedback_title">Report:</string>
    <string name="feedback_button">Send</string>

    <string-array name="feedback_options">
        <item>error</item>
        <item>problem</item>
        <item>bug</item>
        <item>just Hi</item>
    </string-array>

    <string name="feedback_message_hint">message</string>
    <string name="main_play">PLAY</string>
    <string name="main_profile">PROFILE</string>
    <string name="main_help">HELP</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_feedback">Report error</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="title_activity_log_in2">LogIn2</string>
    <string name="login_register">Register</string>
    <string name="main_feedback">Feedback</string>
    <string name="title_activity_help">Help</string>
    <string name="dashboard_help">
    Main screen:
        You can see your profile and the amount of days, you still have until
        your tariff will expire. Also you can choose to start a poker table
        simulation by clicking on the "Play" button. You can also change your
        profile and your tariff by clicking on the "Profile" button. You can
        browse instructions how to use PokerKing application by clicking on
        "Help" button. If you encounter an error, or if you wish to provide us
        feedback use the "Feedback" button. By clicking on the "Back" button
        you may return to the login screen.
    </string>
    <string name="table_help">
	 Poker table screen:
    	Here you can simulate a real Texas Holdem match, and our application
    	will calculate the odds for you! If you wish to attach a specific card
    	to your hand or on the table, simply click on the card and card
    	selection screen will appear. The calculated probabilities of win are
    	shown immediately on the screen. By clicking on the "Back" button you
    	may return to the title screen.  
    </string>
    <string name="user_profile_help">
	 User profile screen:
	 	You can see your profile picture and username here as well as amount
	 	of the days	you still have left to use current cloud computation power.
	 	If you wish to lower or increase the computation power used when
	 	calculating your simulations, you can pick different tarif. Basic tariff
	 	ofers you simple computation power of the fourth core processor.
	 	Advanced tariff provides you with stronger and much faster power of
	 	two four core processors. Finally Proffessional tariff gives you the
	 	massive amount of 5 four core processor power which calculates your
	 	simulations in a blink of an eye.
    </string>
     <string name="feedback_help">
	 Feedback screen:
    	This screen provides you an option to help us improve Poker King
    	application by sending us your opinions or advices. Also you can report
    	any error you will encounter during usage of Poker King application. 
    </string>
</resources>