<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.hifi_prototyp.LogIn" >

    <EditText
        android:id="@+id/editText_register_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_register_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:text="@string/register_name" />

    <TextView
        android:id="@+id/textView_register_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/register_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/checkBox_register_terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_register_password_again"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:text="@string/register_terms"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox_register_terms"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/register_button" />

    <Button
        android:id="@+id/button1"
        style="@style/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/back" />

    <EditText
        android:id="@+id/editText_register_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_username"
        android:layout_below="@+id/editText_register_username"
        android:ems="10"
        android:hint="@string/email_hint"
        android:text="@string/register_email" />

    <EditText
        android:id="@+id/editText_register_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_email"
        android:layout_below="@+id/editText_register_email"
        android:ems="10"
        android:hint="@string/register_birthday_hint"
        android:inputType="date"
        android:text="@string/register_birthday" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText_register_passw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_birthday"
        android:layout_below="@+id/editText_register_birthday"
        android:ems="10"
        android:hint="@string/passw_hint"
        android:inputType="textPassword"
        android:text="@string/register_password" />

    <EditText
        android:id="@+id/editText_register_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_register_passw"
        android:layout_below="@+id/editText_register_passw"
        android:ems="10"
        android:hint="@string/passw_hint"
        android:inputType="textPassword"
        android:text="@string/register_password_again" />

</RelativeLayout>
